tests/should_fail/try_non_result.fit
// Exercises: '?' applied to a non-Result expression (expression-level check)
fn get_value() -> String

fn test() -> String {
    get_value()?
}
